# sample-python-tutorial

./: LICENSE  README.md  pyproject.toml
data/: data_creds.xlsx
sample_python_tutorial/: python_basics.ipynb
