[tool.poetry]
name = "sample-python-tutorial"
version = "0.1.0"
description = ""
authors = ["rajkyutiebaby <rodneyestrada2425@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
